Added connection with Firebase

--- a/src/components/UI/Toolbar/Toolbar.module.css
+++ b/src/components/UI/Toolbar/Toolbar.module.css
@@ -18,5 +18,11 @@
 }
 
 .Logo {
-    width: 50%
+    height: 70%;
+}
+
+@media (max-width: 499px) {
+    .DesktopOnly {
+        display: none;
+    }
 }
