--- a/src/containers/Checkout/ContactData/ContactData.module.css
+++ b/src/containers/Checkout/ContactData/ContactData.module.css
@@ -5,7 +5,7 @@
     box-shadow: 0 2px 3px #ccc;
     border: 1px solid #eee;
     padding: 10px; 
-    box-shadow: border-box;
+    box-sizing: border-box;
 }
 
 @media (min-width: 600px) {
@@ -14,6 +14,6 @@
     }
 }
 
-.Input {
+/* .Input {
     display: block;
-}
+} */
